--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <title>Document</title>
 
         <script type="text/javascript">
-            alart("alart")
+            alert("alart")
         </script>
     </head>
 
