--- a/index.html
+++ b/index.html
@@ -1,24 +1,44 @@
 <!DOCTYPE html>
 <html lang="ja">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-        <title>Document</title>
 
-        <script type="text/javascript">
-            alert("alartじゃなくてalert")
-        </script>
-    </head>
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Document</title>
 
-    <body>
-        <ul>
-            <input type="button" id="permit" value="SafariでDeviceOrientationを許可"/>
-            <li>【方角】<span id="direction"></span></li>
-            <li>【absolute】<span id="absolute"></span></li>
-            <li>【alpha】<span id="alpha"></span></li>
-            <li>【beta】<span id="beta"></span></li>
-            <li>【gamma】<span id="gamma"></span></li>
-        </ul>
-    </body>
+    <script type="text/javascript">
+        alert("alartじゃなくてalert")
+        // ブラウザが通知をサポートしているか確認する
+        if (!('Notification' in window)) {
+            alert('未対応のブラウザです');
+        }
+        else {
+            // 許可を求める
+            Notification.requestPermission()
+                .then((permission) => {
+                    if (permission == 'granted') {
+                        // 許可
+                    } else if (permission == 'denied') {
+                        // 拒否
+                    } else if (permission == 'default') {
+                        // 無視
+                    }
+                });
+        }
+
+    </script>
+</head>
+
+<body>
+    <ul>
+        <input type="button" id="permit" value="SafariでDeviceOrientationを許可" />
+        <li>【方角】<span id="direction"></span></li>
+        <li>【absolute】<span id="absolute"></span></li>
+        <li>【alpha】<span id="alpha"></span></li>
+        <li>【beta】<span id="beta"></span></li>
+        <li>【gamma】<span id="gamma"></span></li>
+    </ul>
+</body>
+
 </html>
