--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <script type="text/javascript">
         alert("alartじゃなくてalert")
-        document.addEventListener("scroll", function initiatePermissionRequest() {//removeのために関数を定義
+        document.addEventListener("touchstart", function initiatePermissionRequest() {//removeのために関数を定義
             if (typeof DeviceOrientationEvent.requestPermission === "function") {//DeviceOrientationEvent.requestPermissionに関数が入っている場合
                 DeviceOrientationEvent.requestPermission()
                     .then((response) => {
@@ -21,10 +21,8 @@
                         }
                     })
                     .catch(console.error);
-            } else {
-                console.log("DeviceOrientationEvent.requestPermission is not supported");
-            }
-            document.removeEventListener("scroll", initiatePermissionRequest);
+                }        
+            document.removeEventListener("touchstart", initiatePermissionRequest);
         });
     </script>
 </head>
@@ -37,109 +35,6 @@
         <li>【alpha】<span id="alpha"></span></li>
         <li>【beta】<span id="beta"></span></li>
         <li>【gamma】<span id="gamma"></span></li>
-        
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-        あ
     </ul>
 </body>
 
