--- a/index.html
+++ b/index.html
@@ -11,18 +11,14 @@
 
 <body>
     <ul>
-        <input type="button" id="permit" value="Apple製品を使ってる場合はこのボタンを押して許可してね" />
-        <li>【方角】<span id="direction"></span></li>
-        <li>【absolute】<span id="absolute"></span></li>
-        <li>【alpha】<span id="alpha"></span></li>
-        <li>【beta】<span id="beta"></span></li>
-        <li>【gamma】<span id="gamma"></span></li>
+        <input type="button" id="permit" value="このボタンを押して許可してね" />
+        <li>【方角】:<span id="direction"></span></li>
     </ul>
     <h1>コンパス</h1>
     <div class="compass-container">
         <div class="compass-needle" id="needle"></div>
     </div>
-    <div class="angle-display" id="angle-display">角度: 0°</div>
+    <li>【角度】:<span id="angle"></span></li>
 </body>
 
 </html>
