UIのバグを修正

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 <body>
     <ul>
         <input type="button" id="permit" value="このボタンを押して許可してね" />
-        <li>【方角】:<span id="direction"></span></li>
+        <div>【方角】:<span id="direction"></span></div>
     </ul>
     <h1>コンパス</h1>
     <div class="compass-container">
         <div class="compass-needle" id="needle"></div>
     </div>
-    <li>【角度】:<span id="angle"></span></li>
+    <div>【角度】:<span id="angle"></span></div>
 </body>
 
 </html>
