UIの最終整え

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 <body>
     <ul>
         <input type="button" id="permit" value="このボタンを押して許可してね" />
-        <div>【方角】:<span id="direction"></span></div>
+        <span class="direction-label">【方角】:<span id="direction"></span></span>
     </ul>
     <h1>コンパス</h1>
     <div class="compass-container">
         <div class="compass-needle" id="needle"></div>
     </div>
-    <div>【角度】:<span id="angle"></span></div>
+    <span class="direction-label">【角度】:<span id="direction"></span></span>
 </body>
 
 </html>
