角度での不具合を修正

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="compass-container">
         <div class="compass-needle" id="needle"></div>
     </div>
-    <span class="direction-label">【角度】:<span id="direction"></span></span>
+    <span class="direction-label">【角度】:<span id="angle"></span></span>
 </body>
 
 </html>
